[package]
name = "compiler"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
object = { path = "../object" }
code = { path = "../code" }
string-interner = "0.7"

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }

[lib]
doctest = false
