[package]
name = "object"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.6"
string-interner = "0.7"
mimalloc = { version = "*", default-features = false }
