[package]
name = "parser"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
token = { path = "../token" }
lexer = { path = "../lexer" }
ast = { path = "../ast"}
lazy_static = "1.4.0"

[lib]
doctest = false

