[package]
name = "repl"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
token = { path = "../token" }
lexer = { path = "../lexer" }
ast = { path = "../ast" }
parser = { path = "../parser" }
object = { path = "../object" }
eval = { path = "../eval" }
sema = { path = "../sema" }
code = { path = "../code" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }
whoami = "0.8"
rustyline = "6.0.0"
colored = "1.9"
structopt = "0.3"
