[package]
name = "sema"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
string-interner = "0.7"

[lib]
doctest = false
