[package]
name = "vm"
version = "0.1.0"
authors = ["John Fourkiotis <john.fourkiotis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code = { path = "../code" }
compiler = { path = "../compiler" }

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }

[lib]
doctest = false
